# seqc-uncompile

./: .gitignore  AGENTS.md  NOTICE  OVERVIEW.md  README.md  RULES-symbol-renaming.md  SESSION_STATE.md  TODO.md  patch.diff
reconstructed/: CMakeLists-libcxx-test.txt  CMakeLists.txt  cleanup_comments.py  cleanup_comments_v2.py
reconstructed/docs/: Doxyfile.in  README.md  architecture.md  coverage.sh
reconstructed/docs/theme/: custom.css
reconstructed/include/opentelemetry/: _stub_fwd.hpp
reconstructed/include/zhinst/: address_impl.hpp  asm_commands.hpp  asm_commands_impl.hpp  asm_expression.hpp  asm_list.hpp  asm_optimize.hpp  asm_parser_context.hpp  asm_register.hpp  assembler.hpp  awg_assembler.hpp  awg_assembler_impl.hpp  awg_compiler_config.hpp  awg_device_props.hpp  cache.hpp  cached_parser.hpp  calver.hpp  compiler.hpp  compiler_message.hpp  custom_functions.hpp  device_constants.hpp  device_factories.hpp  device_subclasses.hpp  device_type.hpp  elf_reader.hpp  elf_writer.hpp  error_messages.hpp  eval_result_value.hpp  eval_results.hpp  exception.hpp  expression.hpp  format_time.hpp  frontend_lowering.hpp  generic_device_type.hpp  log_macros.hpp  logging.hpp  math_compiler.hpp  memory_allocator.hpp  node.hpp  node_map_data.hpp  platform.hpp  (+20 more)
reconstructed/notes/: asm_parser_grammar.md  audit_phase16a.md  awg_device_props.md  binary_contents_excluded.md  bytes_vs_samples_audit.md  cervino_vs_hirzel.md  comment_style_guide.md  custom_functions.md  d14_inventory.md  device_constants.md  device_type.md  diagnostics_text.md  differential_testing.md  elf_format.md  elf_reader.md  error_message_audit.md  fb_instruction.md  frontend_lowering.md  goto_policy.md  incidental_findings.md  libcpp_abi.md  linker_resolution.md  logging_tracing.md  magic_number_audit.md  magic_numbers_proposal.md  memory_allocator_analysis.md  node_tree_structure.md  opcode_encoding.md  opcode_map.md  optimization_passes.md  phase43_investigation.md  phase_e_harness.md  phase_r_leftovers_and_q_scoping.md  pipeline.md  placeholder_field_names.md  play_config.md  prefetch_scheduling.md  seqc_language_features_excluded.md  seqc_parser_grammar.md  seqcc_from_design.md  (+14 more)
reconstructed/notes/archive/: IF-105_update_log.md  IF_1-99.md  IF_100-200.md  IF_201-300.md  OVERVIEW_phase_13_14_narrative.md  OVERVIEW_phases_1-12.md  OVERVIEW_phases_13-25.md  OVERVIEW_symbol_renames_phases_DRS.md  TODO_phases_1-12.md  TODO_phases_13-39.md  TODO_phases_43-62.md  TODO_phases_D-G.md  TODO_phases_D3-D5_D-AUDIT-1.md  goto_policy.md  phase_15b_prefetch_audit.md  static_resources_cervino_consts.md  unknowns_full_1-116.md
reconstructed/notes/symbol-renaming-audit/: 01_types.md  02_memory_allocator.md  03_waveform_generator.md  04a_seqc_ast_node.md  04b_ast_evaluate_helpers.md  04c_ast_evaluate_arith.md  04d_ast_evaluate_logical.md  04e_ast_evaluate_control.md  05a_custom_functions.md  05b_custom_functions_play.md  05c_custom_functions_io.md  05c_custom_functions_io_part2.md  05d_custom_functions_playback.md  06_asm_register.md  07_compiler.md  08_error_messages.md  09_prefetch.md  09_prefetch_part2.md  10_asm_commands.md  11_value.md  12_eval_result_value.md  13_awg_assembler_impl.md  14_waveform.md  15_cached_parser.md  16_waveform_ir.md  17_waveform_front.md  18_seqc_parser_context.md  19a_resources.md  19b_resources_supplementary.md  20_node.md  21_elf_reader.md  22_device_factories.md  23_awg_compiler_config.md  24_asm_expression.md  25_asm_optimize.md  26_assembler.md  27_node_map_data.md  28_awg_compiler.md  29_device_type.md  30_awg_device_props.md  (+27 more)
reconstructed/src/: asm_commands.cpp  asm_commands_impl.cpp  asm_commands_impl_cervino.cpp  asm_commands_impl_hirzel.cpp  asm_expression.cpp  asm_lexer.l  asm_list.cpp  asm_optimize.cpp  asm_parser.y  asm_parser_context.cpp  assembler.cpp  awg_assembler.cpp  awg_assembler_impl.cpp  awg_assembler_impl_pipeline.cpp  awg_assembler_opcodes.cpp  awg_compiler.cpp  awg_compiler_config.cpp  awg_device_props.cpp  cache.cpp  cached_parser.cpp  callbacks.cpp  calver.cpp  compile_seqc.cpp  compiler.cpp  compiler_message.cpp  csv_parser.cpp  custom_functions.cpp  custom_functions_io.cpp  custom_functions_play.cpp  custom_functions_playback.cpp  device_constants.cpp  device_factories.cpp  device_ghf.cpp  device_hdawg.cpp  device_hf2.cpp  device_hwmock.cpp  device_mf.cpp  device_pqsc.cpp  device_qhub.cpp  device_shf.cpp  (+66 more)
reconstructed/src/asm/: asm_commands.cpp  asm_commands_impl.cpp  asm_commands_impl_cervino.cpp  asm_commands_impl_hirzel.cpp  asm_expression.cpp  asm_lexer.l  asm_lexer.l.in  asm_list.cpp  asm_optimize.cpp  asm_optimize_regalloc.cpp  asm_parser.y.in  asm_parser_context.cpp  assembler.cpp
reconstructed/src/ast/: eval_result_value.cpp  eval_results.cpp  expression.cpp  frontend_lowering.cpp  node.cpp  seqc_ast.cpp  seqc_ast_eval_arithmetic.cpp  seqc_ast_eval_control.cpp  seqc_ast_eval_helpers.cpp  seqc_ast_eval_impl.inc  seqc_ast_eval_simple.cpp  seqc_ast_node.cpp  seqc_lexer.c  seqc_parser.tab.c  seqc_parser_context.cpp  value.cpp
reconstructed/src/codegen/: awg_assembler.cpp  awg_assembler_impl.cpp  awg_assembler_impl_pipeline.cpp  awg_assembler_opcodes.cpp  awg_compiler.cpp  awg_compiler_config.cpp  compile_seqc.cpp  compiler.cpp  math_compiler.cpp  memory_allocator.cpp  prefetch.cpp  prefetch_emit.cpp  prefetch_helpers.cpp  prefetch_placesingle.cpp  prefetch_prepare.cpp  prefetch_print.cpp  prefetch_splitplay.cpp
reconstructed/src/core/: base64.cpp  callbacks.cpp  compiler_message.cpp  diagnostics_text.cpp  error_kind.cpp  error_messages.cpp  exception.cpp  format_time.cpp  log_exception.cpp  numeric.cpp  platform.cpp  stubs.cpp
reconstructed/src/device/: awg_device_props.cpp  device_constants.cpp  device_factories.cpp  device_ghf.cpp  device_hdawg.cpp  device_hf2.cpp  device_hwmock.cpp  device_mf.cpp  device_pqsc.cpp  device_qhub.cpp  device_sfc_options.cpp  device_shf.cpp  device_shfacc.cpp  device_type.cpp  device_uhf.cpp  device_unknown.cpp  device_vhf.cpp  generic_device_type.cpp  mf_sfc.cpp  (+1 more)
tests/: CHANGES.md  (+15 more)
tools/seqcc/: CMakeLists.txt  DESIGN.md
(+1195 files in other folders)
